hard-gists/7681066/run.log
=== Docker Run Log for 7681066 ===
Started at: Mi 29. Okt 17:15:10 CET 2025

[2025-10-29 17:15:11] START: Running container for 7681066
[2025-10-29 17:15:11] SUCCESS: Container 1b845569e3947220de4f908842a077e3b324f157b60a060a809ad77fce225819 started for 7681066
=== Container logs for 7681066 ===
  File "/snippet.py", line 35
    print "tablename=> %s, highest_value_used=> %s, alter_statement=> %s" % (t, highest_value, alter_statement)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7681066 ===
[2025-10-29 17:15:13] INFO: Container 1b845569e3947220de4f908842a077e3b324f157b60a060a809ad77fce225819 has stopped
